@@ -1,3 +1,10 @@
+1999-01-02  Jeff Garzik  <jgarzik@pobox.com>
+
+	* util.c:
+	s/sprintf/g_snprintf/
+	s/vsprintf/g_strdup_vprintf/
+	Spaced out some code for readability.
+
 1999-01-02 Raffaele Sena <raff@aromatic.com> via Russell Nelson <nelson@crynwr.com>
 
 	* Fix to autogen.sh for build directory different from package
